# candle-inplace-ops

./: .clangd  .gitignore  Cargo.toml  build.rs
src/: cuda_kernel_manager.rs  dtype.rs  lib.rs  metal_kernel_manager.rs  metal_kernels.rs
src/cuda_src/: binary.cu
src/metal_src/: binary.metal
