[package]
name = "candle-inplace-ops"
version = "0.1.0"
edition = "2024"

[dependencies]
candle-core = { version = "0.9.2", default-features=false }
half = "2.7.1"
float8 = "0.6.0"
thiserror = "2.0.18"

candle-metal-kernels = { version = "0.9.2", optional = true}
objc2 = { version = "0.6.3", optional = true}
objc2-metal = { version = "0.3.2", optional = true}

[features]
metal = ["candle-core/metal", "dep:candle-metal-kernels", "dep:objc2", "dep:objc2-metal"]
